<resources>
    <string name="app_name">小牛智投</string>
    <string name="app_short">xnzhitou</string>
    <string name="limit_hint">为保证提额申请顺利通过，请务必填写真实信息！</string>
    <string name="perfect_information">认证中心</string>
    <string name="personal_information">个人信息</string>
    <string name="save">保存</string>
    <string name="text_certification_more_higher_credit_limit">认证越多，信用额度就会越高哦~</string>
    <string name="text_amount">借款金额</string>
    <string name="text_amount_time">借款期限</string>
    <string name="text_quick_credit_analyst">快速信审费</string>
    <string name="text_amount_management_fees">账户管理费</string>
    <string name="text_interest_on_borrowings">借款利息</string>
    <string name="text_to_book_value">到账金额</string>
    <string name="text_face_recognition">人脸识别</string>
    <string name="text_idcard_recognition">身份证识别</string>
    <string name="text_name">姓名</string>
    <string name="text_please_enter_your_realname">请输入真实姓名</string>
    <string name="text_idcard">身份证</string>
    <string name="text_current_residential_address">现居住地址</string>
    <string name="hint_select_nowlives_cities">请选择现居城市</string>
    <string name="hint_enter_detail_address">请输入详细地址</string>
    <string name="text_immediate_family_membercontacts">直系亲属联系人</string>
    <string name="text_other_contacts">其他联系人</string>
    <string name="text_lose_password">忘记密码</string>
    <string name="text_submit">提交</string>
    <string name="text_change_trade_password">修改交易密码</string>
    <string name="text_cardholder">持卡人</string>
    <string name="text_belong_bank">所属银行</string>
    <string name="text_verification_code">验证码</string>
    <string name="text_input_verification_code">请输入验证码</string>
    <string name="text_enter_bank_reserve_phone_number">请输入银行预留手机号</string>
    <string name="text_input_bankcard">请输入银行卡号</string>
    <string name="text_chose_bank">请选择银行</string>
    <string name="text_register_or_login">您好，请注册/登录</string>
    <string name="text_invitecode_optional">邀请码（选填）</string>
    <string name="text_have_invitecode"><![CDATA[我有邀请码>]]></string>
    <string name="text_register_next_agree">注册即同意</string>
    <string name="text_register">注册</string>
    <string name="text_login">登录</string>
    <string name="text_input_login_password">请输入登录密码</string>
    <string name="text_next">下一步</string>
    <string name="text_find_password">找回密码</string>
    <string name="text_input_phonenumber">请输入手机号</string>
    <string name="text_send_verification">发送验证码</string>
    <string name="text_input_new_password">请输入新密码</string>
    <string name="text_determine_new_password">请确认新密码</string>
    <string name="text_add_bankcard">添加银行卡</string>
    <string name="text_save">保存</string>
    <string name="text_me_know">我知道了</string>
    <string name="text_weixin">微信</string>
    <string name="text_frient_group">朋友圈</string>
    <string name="text_qq">QQ</string>
    <string name="text_qq_area">QQ空间</string>
    <string name="text_close">关闭</string>
    <string name="text_loan_agreement">《小牛秒借借款协议》</string>
    <string name="text_platform_serve_agreement">《平台服务协议》</string>
    <string name="text_message">消息中心</string>
    <string name="text_now_no_payment_bill">当前无还款账单哦~</string>
    <string name="text_loading_your_work_pic">上传你的工作证照</string>
    <string name="text_onclick_add">点击添加</string>
    <string name="text_setup">设置</string>
    <string name="text_login_register">登录/注册</string>
    <string name="text_me_account">我的账户</string>
    <string name="text_login_qihuo_account">我的期货账户</string>
    <string name="text_q_login">去登录</string>
    <string name="text_user_open_account">立即开户</string>
    <string name="text_user_novice">新手教学</string>
    <string name="text_user_kefu">联系客服</string>
    <string name="text_user_phone">客服电话</string>
    <string name="text_user_aboutus">关于我们</string>
    <string name="text_user_update">版本检测</string>
    <string name="text_user_shop_mall">牛币商城</string>
    <string name="text_user_task">任务中心</string>
    <string name="text_user_qihuo_signin">登录期货账户</string>
    <string name="text_user_aqsignout">安全退出</string>
    <string name="text_user_danger_chance">风险率</string>
    <string name="text_user_kymoney">可用资金</string>
    <string name="text_user_rights_interests">当前权益</string>
    <string name="text_user_profit_loss">总持仓盈亏</string>
    <string name="text_user_withdrawals">提现</string>
    <string name="text_user_recharge">充值</string>
    <string name="text_user_position">我的持仓</string>
    <string name="text_user_account_manage">期货账户管理</string>
    <string name="text_user_bond_query">保证金监控中心查询</string>
    <string name="text_user_trade_details">交易明细</string>
    <string name="text_user_bill_details">出入金明细</string>
    <string name="text_user_history_bill">历史账单查询</string>
    <string name="user_account">我的账户</string>
    <string name="user_account_kymoney">可用资金 (元)</string>
    <string name="user_account_profit_loss">总持仓盈亏 (元)</string>
    <string name="user_account_position_profit_loss">平仓盈亏</string>
    <string name="user_account_take_bond">可取保证金</string>
    <string name="user_account_occupy_bond">占用保证金</string>
    <string name="user_account_frozen_bond">冻结保证金</string>
    <string name="user_account_service_charge">手续费</string>
    <string name="user_account_frozen_service_charge">冻结手续费</string>
    <string name="text_optional">自选</string>
    <string name="text_recommend">推荐</string>
    <string name="text_market">市场</string>
    <string name="text_contract_name">合约名称</string>
    <string name="text_latest_price">最新价</string>
    <string name="text_quote_change">涨跌幅</string>
    <string name="text_quote_change_value">涨跌值</string>
    <string name="text_haved_positions">持仓量</string>
    <string name="text_add_qptional">添加自选</string>
    <string name="news_flash">24h快讯</string>
    <string name="news_column">最新资讯</string>
    <string name="verify_get">获取验证码</string>
    <string name="please_open_permission">请在应用管理中打开“%s”访问权限！</string>
    <string name="camera">相机</string>
    <string name="storage">存储</string>
    <string name="call_phone">拨打电话</string>
    <string name="sd_card_not_use">SD卡不可用</string>
    <string name="trade_market">行情</string>
    <string name="trade_build">建仓</string>
    <string name="trade_hold">持仓</string>
    <string name="trade_closed">已平仓</string>
    <string name="trade_agent">委托中</string>
    <string name="trade_market_type">hangqing</string>
    <string name="trade_build_type">jiancang</string>
    <string name="trade_hold_type">chicang</string>
    <string name="trade_closed_type">yipingcang</string>
    <string name="trade_agent_type">weituozhong</string>
    <string name="position_details">持仓详情</string>
    <string name="position_profit_loss">持仓盈亏</string>
    <string name="actual_profit_loss">实际盈亏</string>
    <string name="actual_close">平仓</string>
    <string name="crh_app_name">期货开户云</string>
    <string name="crh_server_domain">appficaos.cfmmc.com</string>
    <string name="crh_server_port"></string>
    <string name="crh_cookie_path">/</string>
    <string name="crh_video_server_ip">anychat.cfmmc.com</string>
    <string name="crh_video_server_port">8906</string>
    <string name="crh_video_ishttps">1</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="button_ok">OK</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="pay_gold">充值</string>
    <string name="out_gold">提现</string>
    <string name="recharge">出入明细</string>
    <string name="out_in_gold">出入金</string>
    <string name="rule_out_in_gold">出入金规则</string>
    <string name="check_bank_asses">查询银行卡余额</string>
    <string name="can_bank_asses">可提现%s元</string>
    <string name="bank_asses">账户余额%s元</string>
    <string name="put_assess">充值金额</string>
    <string name="get_assess">提现金额</string>
    <string name="confirm_pay">确认充值</string>
    <string name="confirm_out">确认提现</string>
    <string name="buy_up_num">买涨%d手</string>
    <string name="buy_down_num">买跌%d手</string>
    <string name="close_trade">休市中</string>
    <string name="yuan">¥%s</string>
    <string name="close_transaction_num_dayu0">手数必须大于0</string>
    <string name="buy_rise">买涨%s</string>
    <string name="buy_down">买跌%s</string>
    <string name="close_pingcang_">平仓-%s</string>
    <string name="close_pingcang">平仓</string>
    <string name="default___">---</string>
    <string name="z_yuan">+¥%s</string>
    <string name="f_yuan">-¥</string>
    <string name="buy_type_num">方向/手数</string>
    <string name="chicang_priced">持仓均价</string>
    <string name="chicang_profit_loss">持仓盈亏</string>
    <string name="pingcang_price">平仓委托价</string>
    <string name="pingcang_num_">平仓手数(最多--手)</string>
    <string name="pingcang_num">平仓手数(最多%d手)</string>
    <string name="weituo_pingcang">委托平仓</string>
    <string name="kuaisu_pingcang">快速平仓</string>
    <string name="conform_call_phone">确定拨打: %s ?</string>
    <string name="close_trade_hint">%1$s %2$s %3$d手 平仓盈亏 %4$s元</string>
    <string name="create_order_tips">每浮动%1$s点,盈亏%2$s元</string>
    <string name="selector_action_done">完成(%1$d/%2$d)</string>
    <string name="selector_folder_all">所有图片</string>
    <string name="picker_images">Images</string>
    <string name="picker_delete">删除</string>
    <string name="picker_done">完成</string>
    <string name="picker_done_with_count">确定(%1$d/%2$d)</string>
    <string name="picker_image_index">%1$d/%2$d</string>
    <string name="picker_undo">撤销</string>
    <string name="picker_deleted_a_photo">删除一张图片</string>
    <string name="picker_confirm_to_delete">确定删除吗?</string>
    <string name="picker_yes">确定</string>
    <string name="picker_cancel">取消</string>
    <string name="picker_all_image">相册</string>
    <string name="picker_over_max_count_tips">最多只能选择 %1$d 张照片</string>
    <string name="picker_image_count">%1$d</string>
    <string name="selector_done">完成</string>
    <string name="selector_preview">预览</string>
    <string name="preview_str">预览(%1$d/%2$d)</string>
    <string name="selector_reach_max_image_hint">您已经选择%d张图片了!</string>
    <string name="tip_take_photo">拍摄照片</string>
    <string name="selector_permission_error">相机权限未开启，请先开启相机权限</string>
    <string name="camera_temp_file_error">图片错误</string>
    <string name="msg_no_camera">无法启动相机!</string>
    <string name="circle_input_hint">楼主说的怎么样，点评一下吧！</string>
    <string name="content_no_null">内容不能为空</string>
    <string name="content_null"></string>
    <string name="comment_all">全部评论 %d</string>
    <string name="comment_all_0">全部评论</string>
    <string name="comment_auth">只看楼主 %d</string>
    <string name="comment_auth_0">只看楼主</string>
    <string name="support_num">%d人点赞</string>
    <string name="live_num">%s人在看</string>
    <string name="support_num_content">人点赞</string>
    <string name="text_xiu">休</string>
    <string name="text_maohao">: %s</string>
    <string name="the_first_few_days">第%s天</string>
    <string name="integral">枚</string>
    <string name="integral_s">%s牛币</string>
    <string name="default_text">默认</string>
    <string name="custom_text">自定义打赏</string>
    <string name="areward_niubi">打赏给 %s</string>
    <string name="live">直播</string>
    <string name="video_close">关闭视频</string>
    <string name="video_open">打开视频</string>
    <string name="audio_close">关闭音频</string>
    <string name="audio_open">打开音频</string>
    <string name="mic_close">停止讲话</string>
    <string name="video_rate_low">低清</string>
    <string name="video_rate_nor">标清</string>
    <string name="speed_choice">选择播放速度</string>
    <string name="idcSwitch">网络切换</string>
    <string name="reword">打赏</string>
    <string name="query_self_tip">查询中,请稍候....</string>
</resources>