<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_signin_account_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_white"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tv_my_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen_15sp"
            android:textColor="@color/color_333333"
            android:layout_gravity="center_vertical"
            android:text="@string/text_login_qihuo_account"
            android:layout_weight="1"/>

          <TextView
              android:id="@+id/tv_signout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/color_FB4F4F"
              android:textSize="@dimen/dimen_14sp"
              android:drawablePadding="@dimen/dimen_7dp"
              android:drawableLeft="@mipmap/ic_user_signout"
              android:text="@string/text_user_aqsignout"/>

    </LinearLayout>

     <LinearLayout
         android:id="@+id/ll_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@mipmap/bg_trade_head"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/dimen_10dp"
         android:layout_marginRight="@dimen/dimen_10dp">


         <LinearLayout
             android:id="@+id/ll_leftAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/dimen_20dp"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:layout_marginBottom="@dimen/dimen_26dp">

             <com.honglu.future.widget.DinTextView
                 android:id="@+id/tv_danger_chance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_22sp"
                 android:textColor="@color/color_333333"
                 android:text="--"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="@dimen/dimen_12sp"
                   android:textColor="@color/color_A4A5A6"
                   android:layout_marginTop="@dimen/dimen_2dp"
                   android:text="@string/text_user_danger_chance"/>


             <com.honglu.future.widget.DinTextView
                 android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_22sp"
                 android:textColor="@color/color_333333"
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:text="--"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_12sp"
                 android:textColor="@color/color_A4A5A6"
                 android:layout_marginTop="@dimen/dimen_2dp"
                 android:text="@string/text_user_kymoney"/>
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginLeft="@dimen/dimen_10dp"
             android:layout_marginTop="@dimen/dimen_20dp"
             android:layout_marginBottom="@dimen/dimen_26dp">


             <com.honglu.future.widget.DinTextView
                 android:id="@+id/tv_rights_interests"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_22sp"
                 android:textColor="@color/color_333333"
                 android:text="--"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_12sp"
                 android:textColor="@color/color_A4A5A6"
                 android:layout_marginTop="@dimen/dimen_2dp"
                 android:text="@string/text_user_rights_interests"/>


             <com.honglu.future.widget.DinTextView
                 android:id="@+id/tv_profit_loss"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_22sp"
                 android:textColor="@color/color_333333"
                 android:layout_marginTop="@dimen/dimen_16dp"
                 android:text="--"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/dimen_12sp"
                 android:textColor="@color/color_A4A5A6"
                 android:layout_marginTop="@dimen/dimen_2dp"
                 android:text="@string/text_user_profit_loss"/>
         </LinearLayout>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginLeft="@dimen/dimen_15dp"
         android:layout_marginRight="@dimen/dimen_15dp"
         android:layout_marginTop="7.5dp">

         <TextView
             android:id="@+id/tv_withdrawals"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/dimen_16sp"
             android:textColor="@color/color_white"
             android:paddingTop="@dimen/dimen_11dp"
             android:paddingBottom="@dimen/dimen_11dp"
             android:layout_marginRight="7.5dp"
             android:gravity="center_horizontal"
             android:layout_weight="1"
             android:background="@drawable/btn_user_withdrawals_bg"
             android:text="@string/text_user_withdrawals"/>

         <TextView
             android:id="@+id/tv_recharge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/dimen_16sp"
             android:layout_weight="1"
             android:textColor="@color/color_white"
             android:background="@drawable/btn_user_recharge_bg"
             android:layout_marginLeft="7.5dp"
             android:paddingTop="@dimen/dimen_11dp"
             android:paddingBottom="@dimen/dimen_11dp"
             android:gravity="center_horizontal"
             android:text="@string/text_user_recharge"/>
     </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_line"
        android:background="@color/color_EDEDED"
        android:layout_margin="@dimen/dimen_15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginBottom="@dimen/dimen_20dp">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:id="@+id/tv_position"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/dimen_14sp"
               android:textColor="@color/color_333333"
               android:drawablePadding="@dimen/dimen_7dp"
               android:gravity="center_vertical"
               android:drawableLeft="@mipmap/ic_user_position"
               android:text="@string/text_user_position"/>


           <TextView
               android:id="@+id/tv_account_manage"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/dimen_14sp"
               android:textColor="@color/color_333333"
               android:drawablePadding="@dimen/dimen_7dp"
               android:layout_marginTop="@dimen/dimen_18dp"
               android:gravity="center_vertical"
               android:drawableLeft="@mipmap/ic_user_account_manage"
               android:text="@string/text_user_account_manage"/>


           <TextView
               android:id="@+id/tv_bond_query"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/dimen_14sp"
               android:textColor="@color/color_333333"
               android:drawablePadding="@dimen/dimen_7dp"
               android:layout_marginTop="@dimen/dimen_18dp"
               android:gravity="center_vertical"
               android:drawableLeft="@mipmap/ic_user_bond_query"
               android:text="@string/text_user_bond_query"/>
       </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen_23dp">

            <TextView
                android:id="@+id/tv_trade_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_333333"
                android:drawablePadding="@dimen/dimen_7dp"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/ic_user_trade_details"
                android:text="@string/text_user_trade_details"/>


            <TextView
                android:id="@+id/tv_bill_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_333333"
                android:drawablePadding="@dimen/dimen_7dp"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/ic_user_bill_details"
                android:text="@string/text_user_bill_details"/>


            <TextView
                android:id="@+id/tv_history_bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/color_333333"
                android:drawablePadding="@dimen/dimen_7dp"
                android:layout_marginTop="@dimen/dimen_18dp"
                android:gravity="center_vertical"
                android:drawableLeft="@mipmap/ic_user_history_bill"
                android:text="@string/text_user_history_bill"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>