<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_marginLeft="@dimen/dimen_15dp"
    android:layout_marginRight="@dimen/dimen_15dp"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:layout_marginBottom="@dimen/dimen_10dp"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_contract_name"
        android:layout_width="77dp"
        android:layout_height="wrap_content"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_13sp"
        android:text="@string/text_contract_name"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_latest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingRight="@dimen/dimen_10dp"
            android:paddingTop="@dimen/dimen_3dp"
            android:paddingBottom="@dimen/dimen_3dp"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_13sp"
            android:text="@string/text_latest_price"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/text_quote_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_333333"
            android:drawableRight="@mipmap/icon_market"
            android:textSize="@dimen/dimen_13sp"
            android:drawablePadding="@dimen/dimen_4dp"
            android:text="@string/text_quote_change"/>

    </LinearLayout>


     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="right|center_vertical"
         android:layout_weight="1">

         <TextView
             android:id="@+id/text_haved_positions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_333333"
             android:drawableRight="@mipmap/icon_market"
             android:drawablePadding="@dimen/dimen_4dp"
             android:textSize="@dimen/dimen_13sp"
             android:text="@string/text_haved_positions"/>
     </LinearLayout>


</LinearLayout>