<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_15dp"
        android:layout_marginRight="@dimen/dimen_15dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/text_contract_name"
        android:layout_width="@dimen/dimen_70dp"
        android:layout_height="@dimen/dimen_25dp"
        android:gravity="center_vertical"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_14sp"
        android:text="@string/text_contract_name"/>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="@dimen/dimen_25dp">
        <com.honglu.future.widget.DinTextView
            android:id="@+id/text_latest_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/dimen_14sp"
            android:text="@string/text_latest_price"/>

         <View
             android:id="@+id/v_color_shansuo"
             android:layout_width="@dimen/dimen_60dp"
             android:layout_gravity="center"
             android:layout_height="match_parent"
             android:visibility="gone"/>
    </FrameLayout>

    <com.honglu.future.widget.DinTextView
        android:id="@+id/text_quote_change"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_25dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_14sp"
        android:text="@string/text_quote_change"/>

     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="@dimen/dimen_25dp"
         android:orientation="horizontal"
         android:gravity="right|center_vertical"
         android:layout_weight="1">

         <com.honglu.future.widget.DinTextView
             android:id="@+id/text_haved_positions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_333333"
             android:textSize="@dimen/dimen_14sp"
             android:text="@string/text_haved_positions"/>

         <ImageView
             android:id="@+id/iv_adddel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_market_optional_add"
             android:layout_marginLeft="@dimen/dimen_10dp"
             android:visibility="visible"/>
     </LinearLayout>
    </LinearLayout>
</LinearLayout>