<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.gensee.view.GSVideoViewEx
        android:id="@+id/imvideoview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <!--     <com.gensee.view.GSAutoDecodeView
            android:id="@+id/imvideoview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" /> -->
    <ImageView
        android:id="@+id/iv_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_player_more"
        android:layout_alignParentRight="true"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/txtVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/video_close" />

        <Button
            android:id="@+id/txtAudio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:text="@string/audio_close" />

        <Button
            android:id="@+id/txtMic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/txtAudio"
            android:text="@string/mic_close"
            android:visibility="gone" />

        <Button
            android:id="@+id/txtHand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtVideo"
            android:enabled="false" />

        <Spinner
            android:id="@+id/spinnerRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtHand"
            android:background="@color/white"
            android:gravity="center" />

        <Button
            android:id="@+id/txtIdc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinnerRate"
            android:enabled="false"
            android:text="@string/idcSwitch" />

        <Button
            android:id="@+id/txtReword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtIdc"
            android:enabled="false"
            android:text="@string/reword" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:background="@drawable/video_num_bg"
        android:padding="@dimen/dimen_5dp"
        android:gravity="center"
        android:text="0人在观看"
        android:drawablePadding="@dimen/dimen_4dp"
        android:textColor="@android:color/white"
        android:drawableLeft="@mipmap/ic_hot"
        android:textSize="@dimen/dimen_12sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_10dp"
        android:layout_toEndOf="@+id/linearLayout"
        android:layout_marginStart="21dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        android:src="@mipmap/ic_video_full" />

</RelativeLayout>